[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/OpenSans-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 22
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
use_filter = true
font_data = ExtResource( 2 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.301961, 0.301961, 0.301961, 1 )

[node name="CategoryLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.05
custom_fonts/font = SubResource( 1 )
text = "ENTER CATEGORY NAMES BELOW:"
align = 1
valign = 1

[node name="CategoryEdit" type="TextEdit" parent="."]
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.25
custom_fonts/font = SubResource( 2 )

[node name="EditLabel" type="Label" parent="."]
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.3
custom_fonts/font = SubResource( 1 )
text = "ENTER SCORE DATA BELOW:
1                                                  2                                                  3"
align = 1
valign = 1

[node name="Edit1" type="VSlider" parent="."]
anchor_left = 0.1
anchor_top = 0.35
anchor_right = 0.1
anchor_bottom = 0.75
margin_right = 16.0
min_value = 100.0
max_value = 1000.0
step = 100.0
value = 100.0

[node name="EditLabel1" type="Label" parent="."]
anchor_left = 0.12
anchor_top = 0.5
anchor_right = 0.22
anchor_bottom = 0.5
margin_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1

[node name="Edit2" type="VSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.75
margin_left = -8.0
margin_right = 8.0
min_value = 100.0
max_value = 1000.0
step = 100.0
value = 100.0

[node name="EditLabel2" type="Label" parent="."]
anchor_left = 0.51
anchor_top = 0.5
anchor_right = 0.61
anchor_bottom = 0.5
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1

[node name="Edit3" type="VSlider" parent="."]
anchor_left = 0.9
anchor_top = 0.35
anchor_right = 0.9
anchor_bottom = 0.75
margin_left = -16.0
min_value = 100.0
max_value = 1000.0
step = 100.0
value = 100.0

[node name="EditLabel3" type="Label" parent="."]
anchor_left = 0.9
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1

[node name="TimerLabel" type="Label" parent="."]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 0.75
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "ENTER TIMER LENGTH BELOW:"
align = 1
valign = 1

[node name="TimerEdit" type="HSlider" parent="."]
anchor_left = 0.1
anchor_top = 0.85
anchor_right = 0.8
anchor_bottom = 0.85
margin_right = 16.0
margin_bottom = 16.0
min_value = 5.0
max_value = 50.0
step = 5.0
value = 20.0

[node name="Timer" type="Label" parent="."]
anchor_left = 0.85
anchor_top = 0.83
anchor_right = 0.9
anchor_bottom = 0.83
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "20"
align = 1
valign = 1

[node name="Apply" type="Button" parent="."]
anchor_left = 0.45
anchor_top = 0.925
anchor_right = 0.55
anchor_bottom = 1.0
margin_right = 6.0
custom_fonts/font = SubResource( 2 )
text = "APPLY"

[connection signal="visibility_changed" from="." to="." method="_on_GUI_visibility_changed"]
[connection signal="value_changed" from="Edit1" to="." method="_on_Edit1_value_changed"]
[connection signal="value_changed" from="Edit2" to="." method="_on_Edit2_value_changed"]
[connection signal="value_changed" from="Edit3" to="." method="_on_Edit3_value_changed"]
[connection signal="value_changed" from="TimerEdit" to="." method="_on_TimerEdit_value_changed"]
[connection signal="pressed" from="Apply" to="." method="_on_Apply_pressed"]
